Open alacritty with no decorations

--- a/defaults/alacritty.toml
+++ b/defaults/alacritty.toml
@@ -4,7 +4,7 @@ TERM = "xterm-256color"
 [window]
 padding.x = 16
 padding.y = 14
-decorations = "Full"
+decorations = "None"
 opacity = 0.97
 
 [keyboard]
